package com.pb.synth.tradecapture.service;

import com.pb.synth.tradecapture.testutil.TestFixtures;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.DisplayName;
import org.junit.jupiter.api.Nested;
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.extension.ExtendWith;
import org.mockito.Mock;
import org.mockito.junit.jupiter.MockitoExtension;

import java.util.List;
import java.util.Map;

import static org.assertj.core.api.Assertions.assertThat;
import static org.assertj.core.api.Assertions.assertThatThrownBy;
import static org.mockito.ArgumentMatchers.any;
import static org.mockito.Mockito.*;

/**
 * Unit tests for ValidationService.
 */
@ExtendWith(MockitoExtension.class)
@DisplayName("ValidationService Unit Tests")
class ValidationServiceTest {

    @Mock
    private AccountServiceClient accountService;
    
    @Mock
    private SecurityMasterServiceClient securityMasterService;
    
    private ValidationService validationService;

    @BeforeEach
    void setUp() {
        // validationService = new ValidationService(accountService, securityMasterService);
    }

    @Nested
    @DisplayName("ISIN Validation")
    class IsinValidationTests {
        
        @Test
        @DisplayName("should validate valid ISIN")
        void should_Validate_When_ValidIsin() {
            // Given
            String isin = "US0378331005";
            var tradeData = Map.of("securityId", isin);

            // When
            // validationService.validateIsin(tradeData);

            // Then
            // No exception thrown
        }

        @Test
        @DisplayName("should reject invalid ISIN format")
        void should_Reject_When_InvalidIsinFormat() {
            // Given
            String invalidIsin = "INVALID";
            var tradeData = Map.of("securityId", invalidIsin);

            // When/Then
            // assertThatThrownBy(() -> validationService.validateIsin(tradeData))
            //     .isInstanceOf(ValidationException.class)
            //     .hasMessageContaining("Invalid ISIN");
        }
    }

    @Nested
    @DisplayName("Book Status Validation")
    class BookStatusValidationTests {
        
        @Test
        @DisplayName("should validate open book")
        void should_Validate_When_BookIsOpen() {
            // Given
            var accountData = TestFixtures.createSampleAccount();
            var tradeData = Map.of("accountId", "ACC-001", "bookId", "BOOK-001");
            
            // when(accountService.lookupAccount(any(), any())).thenReturn(accountData);

            // When
            // validationService.validateBookStatus(tradeData);

            // Then
            // No exception thrown
        }

        @Test
        @DisplayName("should reject closed book")
        void should_Reject_When_BookIsClosed() {
            // Given
            var accountData = Map.of("status", "CLOSED");
            var tradeData = Map.of("accountId", "ACC-001", "bookId", "BOOK-001");
            
            // when(accountService.lookupAccount(any(), any())).thenReturn(accountData);

            // When/Then
            // assertThatThrownBy(() -> validationService.validateBookStatus(tradeData))
            //     .isInstanceOf(ValidationException.class)
            //     .hasMessageContaining("Book is closed");
        }
    }

    @Nested
    @DisplayName("Credit Limit Validation")
    class CreditLimitValidationTests {
        
        @Test
        @DisplayName("should validate when trade amount is within credit limit")
        void should_Validate_When_WithinCreditLimit() {
            // Given
            var tradeData = Map.of(
                "amount", 500000,
                "counterparty", Map.of("creditLimit", 1000000)
            );

            // When
            // validationService.validateCreditLimit(tradeData);

            // Then
            // No exception thrown
        }

        @Test
        @DisplayName("should reject when trade amount exceeds credit limit")
        void should_Reject_When_ExceedsCreditLimit() {
            // Given
            var tradeData = Map.of(
                "amount", 2000000,
                "counterparty", Map.of("creditLimit", 1000000)
            );

            // When/Then
            // assertThatThrownBy(() -> validationService.validateCreditLimit(tradeData))
            //     .isInstanceOf(ValidationException.class)
            //     .hasMessageContaining("Credit limit exceeded");
        }
    }

    @Nested
    @DisplayName("State Transition Validation")
    class StateTransitionValidationTests {
        
        @Test
        @DisplayName("should validate valid state transition")
        void should_Validate_When_ValidTransition() {
            // Given
            var currentState = Map.of("positionState", "EXECUTED");
            var newState = Map.of("positionState", "FORMED");

            // When
            // validationService.validateStateTransition(currentState, newState);

            // Then
            // No exception thrown
        }

        @Test
        @DisplayName("should reject invalid state transition")
        void should_Reject_When_InvalidTransition() {
            // Given
            var currentState = Map.of("positionState", "CLOSED");
            var newState = Map.of("positionState", "EXECUTED");

            // When/Then
            // assertThatThrownBy(() -> validationService.validateStateTransition(currentState, newState))
            //     .isInstanceOf(ValidationException.class)
            //     .hasMessageContaining("Invalid state transition");
        }
    }

    @Nested
    @DisplayName("CDM Compliance Validation")
    class CdmComplianceTests {
        
        @Test
        @DisplayName("should validate CDM-compliant trade")
        void should_Validate_When_CdmCompliant() {
            // Given
            var tradeData = Map.of(
                "tradeLots", TestFixtures.createSampleTradeLot(),
                "contract", Map.of("economicTerms", TestFixtures.createSampleEconomicTerms())
            );

            // When
            // validationService.validateCdmCompliance(tradeData);

            // Then
            // No exception thrown
        }

        @Test
        @DisplayName("should reject non-CDM-compliant trade")
        void should_Reject_When_NotCdmCompliant() {
            // Given
            var tradeData = Map.of("tradeLots", List.of());

            // When/Then
            // assertThatThrownBy(() -> validationService.validateCdmCompliance(tradeData))
            //     .isInstanceOf(ValidationException.class)
            //     .hasMessageContaining("CDM compliance");
        }
    }
}

